--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,18 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,600;0,800;1,400&family=Urbanist:wght@300&display=swap"
-    rel="stylesheet">
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
-  <title>e_Commerce_App</title>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
+  <style>
+    * {
+      margin: 0;
+      font-family: 'Urbanist', sans-serif;
+    }
+  </style>
+  <title>React App</title>
 </head>
 
 <body>
